# albatross-data

./: .gitignore  .gitmodules  .tool-versions  AGENT.md  BENCHMARK_RESULTS.md  DATAFUSION_SIMPLIFICATION_COMPLETE.md  EXECUTOR_README.md  GPU_ARCHITECTURE_COMPREHENSIVE.md  GPU_ARCHITECTURE_DIAGRAMS.md  GPU_INFRASTRUCTURE_ANALYSIS.md  IMPLEMENTATION.md  INTEGRATION.md  INTEGRATION_COMPLETE.md  Makefile  README.md  SHADER_REFERENCE.md  SMOKE_TEST_RESULTS.md  VULKAN_DEBUGGING_GUIDE.md  generate_10m_orders.sh  test_gpu_group_by.py  test_group_by.py
.vibe/: config.toml
.vibe/skills/_shared/: build-and-query.md
.vibe/skills/hex-heatmap/: SKILL.md
.vibe/skills/ipynb/: SKILL.md
.vibe/skills/pulumi_infra/: SKILL.md
data-embed/: Cargo.toml  README.md  sql_aggregation_tests.ipynb  test_queries.py
data-embed/data/: orders.parquet
data-embed/datafusion-cli/: Cargo.toml
data-embed/datafusion-cli/src/: main.rs  manifest.rs
data-embed/executor/: Cargo.toml  GPU_IMPLEMENTATION_SUMMARY.md  README.md  build.rs
data-embed/executor/examples/: benchmark_gpu.rs  benchmark_gpu_100m.rs  test_all_ops.rs
data-embed/executor/src/: aggregations.rs  executor.rs  ffi.rs  gpu_buffers.rs  gpu_dispatch.rs  gpu_pipeline.rs  gpu_types.rs  joins.rs  lib.rs  main.rs  metrics.rs  plan_analyzer.rs  wgpu_engine.rs  wgsl_shader.rs  window.rs
data-embed/executor/src/velox/: expr_converter.rs  mod.rs  substrait_parser.rs  type_converter.rs  velox_plan_builder.rs
data-embed/generate-test-data/: Cargo.toml
data-embed/generate-test-data/src/: main.rs
data-embed/output/: query1.pb  query2.pb  query3.pb  query4.pb  test.pb
data-kernel/: DataKernel_Tests.ipynb  inspect_test_data.py  inspect_with_arrow.py  pyproject.toml  setup.py  test_correct_queries.py  test_force_cpu.py  test_groupby_debug.py  test_improved_errors.py  test_integration.py  test_join_with_groupby.py  test_list_tables.py  test_original_failing_query.py  test_q7_debug.py  test_schema_check.py  test_simple_gpu.py
data-kernel/docker/: Dockerfile  kernel-python-datakernel.json  kernel-sql.json  requirements.txt
data-kernel/src/data_kernel/: __init__.py  arrow_bridge.c  execute.py  kernel.py
data-kernel/tests/: test_debug_failures.py  test_gpu_comparison.py  test_select_star_fix.py  test_string_columns.py  test_window_actual_data.py  test_window_deep_dive.py  test_window_edge_cases.py  test_window_functions.py  test_window_return_type.py
scripts/: benchmark.sh  benchmark_cpu_gpu.py  benchmark_cpu_gpu.sh  vulkan_script.sh
