[workspace]
members = ["datafusion-cli", "generate-test-data"]
resolver = "2"

[workspace.dependencies]
datafusion = "43.0"
datafusion-substrait = "43.0"
arrow = "53.3"
parquet = "53.3"
tokio = { version = "1.41", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rand = "0.8"
prost = "0.13"
