[project]
name = "data-kernel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "LukeS", email = "luke.shulman@datarobot.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ipykernel",
    "pandas",
    "pyarrow",
    "jupyter-mimetypes", 
    "tabulate",
    "duckdb"
]

[project.optional-dependencies]
dev = ["jupyterlab"]

[project.scripts]
data-kernel = "data_kernel:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["data_kernel"]

[tool.setuptools.package-data]
data_kernel = ["*.so", "*.dylib"]

