[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
datafusion = { workspace = true }
datafusion-substrait = { workspace = true }
prost = { workspace = true }
libc = "0.2"
hex = "0.4"

[build-dependencies]
