[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[lib]
name = "executor"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "data-run"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
datafusion = { workspace = true }
datafusion-substrait = { workspace = true }
arrow = { version = "53.3.0", features = ["ffi"] }
prost = { workspace = true }
wgpu = "23"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
futures = "0.3"
rand.workspace = true
serde_json = { workspace = true }
